editting modules correctly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.properties.hibernate.jdbc.lon.non_contextual_creation=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/estagio
 spring.datasource.username=postgres
-spring.datasource.password=something
+spring.datasource.password=sdrnr666
 #criar automaticamente as tabelas do bd com marcações jpa
 spring.jpa.hibernate.ddl-auto=update
 #localização das migrações
